--- a/src/BanishedBot/Properties/Resources.resx
+++ b/src/BanishedBot/Properties/Resources.resx
@@ -124,6 +124,9 @@
   <data name="MC" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\MC.jpg;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="MCT" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\MCT.jpg;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="ZG" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ZG.jpg;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
