--- a/src/BanishedBot/Properties/Resources.resx
+++ b/src/BanishedBot/Properties/Resources.resx
@@ -118,16 +118,40 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="AQR" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\AQR.jpg;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="AQR0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\AQR0.jpg;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="MC" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\MC.jpg;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="AQR1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\AQR1.jpg;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="MCT" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\MCT.jpg;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="BWL0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\BWL0.jpg;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="ZG" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\ZG.jpg;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="MC0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\MC0.jpg;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="MC1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\MC1.jpg;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="MC2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\MC2.webp;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="MCT0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\MCT0.jpg;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="ONY0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ONY0.jpg;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="ONY1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ONY1.jpg;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="ZG0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ZG0.jpg;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="ZG1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ZG1;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="ZG2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ZG2.png;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
 </root>
